--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -39,6 +39,6 @@ const { class: cls, ...props } = Astro.props;
     }
 </style>
 
-<a class:list={["button", cls]} {...props}>
-    <slot />
+<a class:list={['button', cls]} {...props}>
+  <slot />
 </a>
