--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import Button from "./Button.astro";
+import Button from './Button.astro';
 ---
 
 <style>
@@ -53,32 +53,32 @@ import Button from "./Button.astro";
 </style>
 
 <section class="footer">
-    <div class="footer-spacer"></div>
+  <div class="footer-spacer"></div>
 
-    <div class="footer-row-1">
-        <a href="mailto:sferg989@gmail.com">
-            <h3>
+  <div class="footer-row-1">
+    <a href="mailto:sferg989@gmail.com">
+      <h3>
                 Say Hi<span class="hidden">Hiii!</span>
-            </h3>
-        </a>
+      </h3>
+    </a>
 
-        <div>
+    <div>
             _
-            <Button
-                class="button"
-                href="https://www.linkedin.com/in/stephen-ferguson-964a7b57/"
-                target="_blank"
-            >
+      <Button
+        class="button"
+        href="https://www.linkedin.com/in/stephen-ferguson-964a7b57/"
+        target="_blank"
+      >
                 linkedin
-            </Button>
+      </Button>
              /
-            <Button
-                class="button"
-                href="https://github.com/sferg989"
-                target="_blank"
-            >
+      <Button
+        class="button"
+        href="https://github.com/sferg989"
+        target="_blank"
+      >
                 github
-            </Button>
-        </div>
+      </Button>
     </div>
+  </div>
 </section>
