--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,11 +1,11 @@
 ---
-import Button from "./Button.astro";
+import Button from './Button.astro';
 ---
 
 <style>
     .menu {
         font-weight: 300;
-        padding: 0 var(--spacingSm) 0 var(--spacingSm); 
+        padding: 0 var(--spacingSm) 0 var(--spacingSm);
         z-index: 1;
     }
 
@@ -16,9 +16,9 @@ import Button from "./Button.astro";
 
 <section class="menu">
     _
-    <Button class="btn" href="/#hello">hello</Button>
+  <Button class="btn" href="/#hello">hello</Button>
      //
-    <Button class="btn" href="/#projects">projects</Button>
+  <Button class="btn" href="/#projects">projects</Button>
      //
-    <Button class="btn" href="/about">about</Button>
+  <Button class="btn" href="/about">about</Button>
 </section>
