--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import Menu from "./Menu.astro";
+import Menu from './Menu.astro';
 ---
 
 <style>
@@ -54,6 +54,6 @@ import Menu from "./Menu.astro";
 </style>
 
 <nav>
-    <a class="logo" href="/">Ferguson</a>
-    <Menu />
+  <a class="logo" href="/">Ferguson</a>
+  <Menu />
 </nav>
