--- a/src/components/rows/Cols.astro
+++ b/src/components/rows/Cols.astro
@@ -1,5 +1,5 @@
 ---
-import Row from "../rows/Row.astro";
+import Row from '../rows/Row.astro';
 ---
 
 <style>
@@ -23,11 +23,11 @@ import Row from "../rows/Row.astro";
 </style>
 
 <Row>
-    <section class="col col1">
-        <slot name="col1" />
-    </section>
+  <section class="col col1">
+    <slot name="col1" />
+  </section>
 
-    <section class="col col2">
-        <slot name="col2" />
-    </section>
+  <section class="col col2">
+    <slot name="col2" />
+  </section>
 </Row>
