--- a/src/components/rows/Row.astro
+++ b/src/components/rows/Row.astro
@@ -22,6 +22,6 @@ const { class: cls, ...props } = Astro.props;
     }
 </style>
 
-<section class:list={["row", cls]} {...props}>
-    <slot />
+<section class:list={['row', cls]} {...props}>
+  <slot />
 </section>
