--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from "./MainLayout.astro";
+import MainLayout from './MainLayout.astro';
 ---
 
 <style>
@@ -13,7 +13,7 @@ import MainLayout from "./MainLayout.astro";
 </style>
 
 <MainLayout>
-    <section>
-        <slot />
-    </section>
+  <section>
+    <slot />
+  </section>
 </MainLayout>
