--- a/src/components/rows/ColsLeft.astro
+++ b/src/components/rows/ColsLeft.astro
@@ -3,8 +3,8 @@ interface Props {
     title?: string;
 }
 
-import Row from "../rows/Row.astro";
-import SectionTitle from "../text/SectionTitle.astro";
+import Row from '../rows/Row.astro';
+import SectionTitle from '../text/SectionTitle.astro';
 
 const { title } = Astro.props;
 ---
@@ -65,20 +65,20 @@ const { title } = Astro.props;
 </style>
 
 <Row class="cols-left">
-    <section class="col1">
-        <div class="cols-left-stick">
-            {
-                title ? (
-                    <SectionTitle rotate={false} class="cols-left-title">
-                        {title}
-                    </SectionTitle>
-                ) : null
-            }
-            <slot name="col1" />
-        </div>
-    </section>
+  <section class="col1">
+    <div class="cols-left-stick">
+      {
+        title ? (
+          <SectionTitle rotate={false} class="cols-left-title">
+            {title}
+          </SectionTitle>
+        ) : null
+      }
+      <slot name="col1" />
+    </div>
+  </section>
 
-    <section class="cols-left col2">
-        <slot name="col2" />
-    </section>
+  <section class="cols-left col2">
+    <slot name="col2" />
+  </section>
 </Row>
