--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,6 +1,6 @@
 ---
-import "../style/project.css";
-import MainLayout from "./MainLayout.astro";
+import '../style/project.css';
+import MainLayout from './MainLayout.astro';
 ---
 
 <style>
@@ -10,5 +10,5 @@ import MainLayout from "./MainLayout.astro";
 </style>
 
 <MainLayout>
-    <slot />
+  <slot />
 </MainLayout>
